- rpmdrake
  o fix searching on just names (#54339)

Version 5.20 - 2 October 2009, Thierry Vignaud

- rpmdrake
  o display orphan packages after removing some packages
  o fix registering orphan package (#51229)

Version 5.19 - 1 October 2009, Thierry Vignaud

- gurpmi.addmedia
  o fix message when adding distrib media (#49566)
- rpmdrake
  o fix encoding of diff output (#52994)  
  o fix for unreproductable crash (#49273)
  o fix rare crash when medium is unknown (#49901)
  o fix rare crash with packages without any URPM objects (#52751)
  o update GUI package list

Version 5.18 - 1 October 2009, Thierry Vignaud

- edit-urpm-sources:
  o use proper stock icons for arrows
- rpmdrake
  o added dependencies section in package details panel (#39491)
  o enable to apply priority updates without trying to select any
    package
  o search
    * clear search results too when cleaing searched text (#49239)
    * default to OR like searches for searches among package names (#37643)
    * enable to disable use of regular expression (default is: disabled)
    * enable to search in full or short package names (#46473)
    * fix searching for summary on startup (#49293)
    * rerun search after reloading package list (#49834)
  o show rpmdrake version in about dialog instead of distribution
    version (#49467)
  o warn on exit if some packages are selected (#45404)

Version 5.17 - 1 June 2009, Thierry Vignaud

- consider chrooted /etc/product.id when detecting whether installed
  distro is stable or cooker
- do not restart if we didn't install any package (when having
  priority packages)
- fix not displaying importance and reasons of updates (#51118)
  (regression introduced by #50276 fix in 5.16.2)
- make 'urpmi-root' implying rpm-root so that the proper chrooted db
  got opened
- rpmdrake:
  o update GUI package list

Version 5.16.4 - 13 May 2009, Thierry Vignaud

- rpmdrake:
  o do not crash when running as root (#50473)

Version 5.16.3 - 6 May 2009, Thierry Vignaud
